# pick-and-place

./: .gitignore  README.md  ROS2_Pick_and_Place_项目说明.md
src/common/: CMakeLists.txt  package.xml
src/common/include/common/: constants.hpp  defer.hpp  plan_execute.hpp
src/msgs/: CMakeLists.txt  package.xml
src/msgs/action/: PlaceObject.action  RunTask.action
src/pick_place_bringup/: CMakeLists.txt  package.xml
src/pick_place_bringup/config/: ur_controllers.yaml
src/pick_place_bringup/launch/: pick_place_sim.launch.py
src/pick_place_bringup/rviz/: view_robot.rviz
src/pick_place_bringup/srdf/: ur.srdf.xacro
src/pick_place_bringup/urdf/: robotiq_2f85.xacro  ur5e_with_gripper.urdf.xacro
src/pick_place_bringup/worlds/: pick_place.sdf
src/pick_planner/: CMakeLists.txt  package.xml
src/pick_planner/src/: minimal_test.cpp  pick_planner_node.cpp  pose_test.cpp
src/place_planner/: CMakeLists.txt  package.xml
src/place_planner/src/: place_planner_node.cpp
src/task_state_machine/: CMakeLists.txt  package.xml
src/task_state_machine/src/: task_state_machine_node.cpp
src/task_state_machine/trees/: pick_place.xml
src/vision_detector/: CMakeLists.txt  package.xml
src/vision_detector/include/vision_detector/: constants.hpp
src/vision_detector/src/: vision_detector_node.cpp
